@@ -2,118 +2,215 @@ package io.openaev.rest.finding;
 
 import static io.openaev.utils.fixtures.AssetFixture.createDefaultAsset;
 import static io.openaev.utils.fixtures.InjectFixture.getDefaultInject;
-import static io.openaev.utils.fixtures.OutputParserFixture.getDefaultContractOutputElement;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.*;
+import static io.openaev.utils.fixtures.OutputParserFixture.getContractOutputElementTypeIPv6;
+import static org.junit.jupiter.api.Assertions.*;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import io.openaev.IntegrationTest;
-import io.openaev.database.model.Asset;
-import io.openaev.database.model.ContractOutputElement;
-import io.openaev.database.model.Finding;
-import io.openaev.database.model.Inject;
-import io.openaev.database.repository.AssetRepository;
+import io.openaev.database.model.*;
 import io.openaev.database.repository.FindingRepository;
-import io.openaev.database.repository.TeamRepository;
-import io.openaev.database.repository.UserRepository;
-import io.openaev.rest.inject.service.InjectService;
+import io.openaev.injector_contract.outputs.InjectorContractContentOutputElement;
+import io.openaev.rest.inject.service.ContractOutputContext;
 import io.openaev.rest.injector_contract.InjectorContractContentUtils;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Optional;
-import java.util.Set;
+import io.openaev.utils.helpers.InjectTestHelper;
+import java.util.*;
 import java.util.stream.Collectors;
-import org.junit.jupiter.api.*;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.transaction.annotation.Transactional;
 
-@ExtendWith(MockitoExtension.class)
+@Transactional
 class FindingServiceTest extends IntegrationTest {
 
   public static final String ASSET_1 = "asset1";
   public static final String ASSET_2 = "asset2";
 
+  @Autowired private InjectTestHelper injectTestHelper;
+  @Autowired private FindingService findingService;
+  @Autowired private FindingRepository findingRepository;
   @Autowired private InjectorContractContentUtils injectorContractContentUtils;
-  @Mock private InjectService injectService;
-  @Mock private FindingRepository findingRepository;
-  @Mock private AssetRepository assetRepository;
-  @Mock private TeamRepository teamRepository;
-  @Mock private UserRepository userRepository;
-  @InjectMocks private FindingService findingService;
-
-  @BeforeEach
-  void setUp() {
-    findingService =
-        new FindingService(
-            injectService,
-            findingRepository,
-            assetRepository,
-            teamRepository,
-            userRepository,
-            injectorContractContentUtils);
-  }
 
   @Test
-  @DisplayName("Should have two assets for a finding")
+  @DisplayName("Should have two assets when finding already exists with one asset")
   void given_a_finding_already_existent_with_one_asset_should_have_two_assets() {
     Inject inject = getDefaultInject();
-    Asset asset1 = createDefaultAsset(ASSET_1);
-    asset1.setId(ASSET_1);
-    Asset asset2 = createDefaultAsset(ASSET_2);
-    asset2.setId(ASSET_2);
+    Asset asset1 = injectTestHelper.forceSaveAsset(createDefaultAsset(ASSET_1));
+    Asset asset2 = injectTestHelper.forceSaveAsset(createDefaultAsset(ASSET_2));
     String value = "value-already-existent";
-    ContractOutputElement contractOutputElement = getDefaultContractOutputElement();
+    ContractOutputElement contractOutputElement = getContractOutputElementTypeIPv6();
+    ContractOutputContext contractOutputContext = ContractOutputContext.from(contractOutputElement);
 
-    Finding finding1 = new Finding();
-    finding1.setValue(value);
-    finding1.setInject(inject);
-    finding1.setField(contractOutputElement.getKey());
-    finding1.setType(contractOutputElement.getType());
-    finding1.setAssets(new ArrayList<>(Arrays.asList(asset1)));
+    Finding existing = new Finding();
+    existing.setValue(value);
+    existing.setInject(inject);
+    existing.setField(contractOutputElement.getKey());
+    existing.setType(contractOutputElement.getType());
+    existing.setAssets(new ArrayList<>(List.of(asset1)));
 
-    when(findingRepository.findByInjectIdAndValueAndTypeAndKey(
-            inject.getId(), value, contractOutputElement.getType(), contractOutputElement.getKey()))
-        .thenReturn(Optional.of(finding1));
+    injectTestHelper.forceSaveInject(inject);
+    injectTestHelper.forceSaveFinding(existing);
 
-    findingService.buildFinding(inject, asset2, contractOutputElement, value);
+    findingService.saveAgentFinding(inject, asset2, contractOutputContext, value);
 
-    ArgumentCaptor<Finding> findingCaptor = ArgumentCaptor.forClass(Finding.class);
-    verify(findingRepository).save(findingCaptor.capture());
-    Finding capturedFinding = findingCaptor.getValue();
+    Finding result =
+        findingRepository
+            .findByInjectIdAndValueAndTypeAndKey(
+                inject.getId(),
+                value,
+                contractOutputElement.getType(),
+                contractOutputElement.getKey())
+            .orElseThrow();
 
-    assertEquals(2, capturedFinding.getAssets().size());
+    assertEquals(2, result.getAssets().size());
     Set<String> assetIds =
-        capturedFinding.getAssets().stream().map(Asset::getId).collect(Collectors.toSet());
-    assertTrue(assetIds.contains(ASSET_1));
-    assertTrue(assetIds.contains(ASSET_2));
+        result.getAssets().stream().map(Asset::getId).collect(Collectors.toSet());
+    assertTrue(assetIds.contains(asset1.getId()));
+    assertTrue(assetIds.contains(asset2.getId()));
   }
 
   @Test
-  @DisplayName("Should have one asset for a finding")
-  void given_a_finding_already_existent_with_same_asset_should_have_one_assets() {
+  @DisplayName("Should have one asset when finding already exists with the same asset")
+  void given_a_finding_already_existent_with_same_asset_should_have_one_asset() {
     Inject inject = getDefaultInject();
-    Asset asset1 = createDefaultAsset(ASSET_1);
-    asset1.setId(ASSET_1);
+    Asset asset1 = injectTestHelper.forceSaveAsset(createDefaultAsset(ASSET_1));
     String value = "value-already-existent";
-    ContractOutputElement contractOutputElement = getDefaultContractOutputElement();
+    ContractOutputElement contractOutputElement = getContractOutputElementTypeIPv6();
+    ContractOutputContext contractOutputContext = ContractOutputContext.from(contractOutputElement);
 
-    Finding finding1 = new Finding();
-    finding1.setValue(value);
-    finding1.setInject(inject);
-    finding1.setField(contractOutputElement.getKey());
-    finding1.setType(contractOutputElement.getType());
-    finding1.setAssets(new ArrayList<>(Arrays.asList(asset1)));
+    Finding existing = new Finding();
+    existing.setValue(value);
+    existing.setInject(inject);
+    existing.setField(contractOutputElement.getKey());
+    existing.setType(contractOutputElement.getType());
+    existing.setAssets(new ArrayList<>(List.of(asset1)));
 
-    when(findingRepository.findByInjectIdAndValueAndTypeAndKey(
-            inject.getId(), value, contractOutputElement.getType(), contractOutputElement.getKey()))
-        .thenReturn(Optional.of(finding1));
+    injectTestHelper.forceSaveInject(inject);
+    injectTestHelper.forceSaveFinding(existing);
 
-    findingService.buildFinding(inject, asset1, contractOutputElement, value);
+    findingService.saveAgentFinding(inject, asset1, contractOutputContext, value);
 
-    verify(findingRepository, never()).save(any());
+    Finding result =
+        findingRepository
+            .findByInjectIdAndValueAndTypeAndKey(
+                inject.getId(),
+                value,
+                contractOutputElement.getType(),
+                contractOutputElement.getKey())
+            .orElseThrow();
+
+    assertEquals(1, result.getAssets().size());
+    assertTrue(
+        result.getAssets().stream()
+            .map(Asset::getId)
+            .collect(Collectors.toSet())
+            .contains(asset1.getId()));
+  }
+
+  @Test
+  @DisplayName("Should return two findings for multiple finding-compatible CVE contract outputs")
+  void shouldReturnFindingsForMultipleFindingCompatibleContractOutputs() throws Exception {
+    ObjectMapper mapper = new ObjectMapper();
+    ObjectNode convertedContent =
+        (ObjectNode)
+            mapper.readTree(
+                """
+        {
+          "outputs": [
+            {
+              "field": "cves",
+              "isFindingCompatible": true,
+              "isMultiple": true,
+              "labels": ["nuclei"],
+              "type": "cve"
+            }
+          ]
+        }
+        """);
+    ObjectNode structuredOutput =
+        (ObjectNode)
+            mapper.readTree(
+                """
+        {
+          "cves": [
+            { "id": "cve A", "host": "host A", "severity": "high" },
+            { "id": "cve B", "host": "host B", "severity": "medium" }
+          ]
+        }
+        """);
+
+    List<InjectorContractContentOutputElement> contractOutputs =
+        injectorContractContentUtils.getContractOutputs(convertedContent, mapper);
+    ContractOutputContext ctx = ContractOutputContext.from(contractOutputs.getFirst());
+    JsonNode elementNode = structuredOutput.path("cves");
+
+    List<Finding> findings =
+        findingService.buildFindings(
+            elementNode,
+            ctx,
+            node -> node.hasNonNull("id") && node.hasNonNull("host") && node.hasNonNull("severity"),
+            node -> node.get("id").asText(),
+            node -> Collections.emptyList(),
+            node -> Collections.emptyList(),
+            node -> Collections.emptyList());
+
+    assertNotNull(findings);
+    assertEquals(2, findings.size());
+    assertTrue(findings.stream().allMatch(f -> f.getType().equals(ContractOutputType.CVE)));
+    Set<String> values = findings.stream().map(Finding::getValue).collect(Collectors.toSet());
+    assertTrue(values.contains("cve A"));
+    assertTrue(values.contains("cve B"));
+  }
+
+  @Test
+  @DisplayName("Should throw exception when finding node is not correctly formatted")
+  void shouldThrowExceptionWhenFindingNotCorrectlyFormatted() throws Exception {
+    ObjectMapper mapper = new ObjectMapper();
+    ObjectNode convertedContent =
+        (ObjectNode)
+            mapper.readTree(
+                """
+        {
+          "outputs": [
+            {
+              "field": "port_scans",
+              "isFindingCompatible": true,
+              "isMultiple": true,
+              "labels": ["nuclei"],
+              "type": "portscan"
+            }
+          ]
+        }
+        """);
+    ObjectNode structuredOutput =
+        (ObjectNode)
+            mapper.readTree(
+                """
+        {
+          "port_scans": [ null ]
+        }
+        """);
+
+    List<InjectorContractContentOutputElement> contractOutputs =
+        injectorContractContentUtils.getContractOutputs(convertedContent, mapper);
+    ContractOutputContext ctx = ContractOutputContext.from(contractOutputs.getFirst());
+    JsonNode elementNode = structuredOutput.path("port_scans");
+
+    assertThrows(
+        IllegalArgumentException.class,
+        () ->
+            findingService.buildFindings(
+                elementNode,
+                ctx,
+                node ->
+                    node.hasNonNull("host")
+                        && node.hasNonNull("port")
+                        && node.hasNonNull("service"),
+                node -> node.get("port").asText(),
+                node -> Collections.emptyList(),
+                node -> Collections.emptyList(),
+                node -> Collections.emptyList()));
   }
 }
